corrected spacing and layout

--- a/client/src/dashboard/style.css
+++ b/client/src/dashboard/style.css
@@ -1,5 +1,5 @@
 .btn-create {
-    background-color: #186e1b;
+    background-color: #296e2b;
   border: #443a03;
   color: #100A00;
   padding: 15px 32px;
@@ -27,7 +27,7 @@
   }
 
   .mySearchBtn {
-    background-color: #2d5308;
+    background-color: #08771b;
     border: none;
     color: white;
     padding: 8px 32px;
